--- a/grid-demo/styles.css
+++ b/grid-demo/styles.css
@@ -1,9 +1,18 @@
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 100px);
+  grid-template-rows: repeat(4, 100px);
+  /* grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px; */
   grid-gap: 10px;
   padding: 10px;
+}
+
+.grid-item:nth-child(1) {
+  grid-row: 3 / span 1;
+  /* grid-column: 1/4; */
+  grid-column: 1 / 4;
+  /* grid:  */
 }
 /* dont forget to show dev tools! */
 
@@ -14,6 +23,11 @@
   font-size: 30px;
   text-align: center;
 }
+
+/* .grid-item:nth-child(1) {
+  grid-column: 1/3;
+  grid-row: 1/3;
+} */
 
 body {
   margin: 0;
